# business-assistant-tts-plugin

./: .gitattributes  .gitignore  CLAUDE.md  README.md  install.bat  pyproject.toml  start.bat  update.bat
docs/: INSTALL_KITTEN_TTS.md  INSTALL_QWEN3_TTS.md
src/business_assistant_tts/: __init__.py  command_handler.py  config.py  constants.py  message_modifier.py  plugin.py  response_processor.py  text_sanitizer.py  tts_service.py
src/business_assistant_tts/providers/: base.py  kitten.py  kitten_api.py  qwen3.py
tests/: __init__.py  test_plugin.py  test_qwen3_provider.py  test_response_processor.py  test_text_sanitizer.py  test_tts_service.py
tools/: install_qwen3.bat  test_tts.bat  test_tts_crash.bat  test_tts_crash.py  test_tts_generate.py
